Setup mcp agent