@@ -1,12 +1,13 @@
 package com.jenksy.jenksymcp;
 
-import com.jenksy.jenksymcp.service.CourseService;
+import com.jenksy.jenksymcp.service.AgentService;
 import org.springframework.ai.support.ToolCallbacks;
 import org.springframework.ai.tool.ToolCallback;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
 
+import java.util.Arrays;
 import java.util.List;
 
 @SpringBootApplication
@@ -16,11 +17,9 @@ public class JenksyMcpApplication {
         SpringApplication.run(JenksyMcpApplication.class, args);
     }
 
-
     @Bean
-    public List<ToolCallback> toolCallbacks(CourseService courseService) {
-        return List.of(
-                ToolCallbacks.from(courseService)
-        );
+    public List<ToolCallback> toolCallbacks(AgentService agentService) {
+        var agentCallbacks = ToolCallbacks.from(agentService);
+        return Arrays.asList(agentCallbacks);
     }
 }
